--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "firebase": "^9.14.0",
+    "formik": "^2.2.9",
     "next": "12.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebaseui": "^6.0.0"
+    "react-firebase-hooks": "^5.1.1",
+    "react-firebaseui": "^6.0.0",
+    "uuid": "^9.0.0"
   }
 }
