--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.1.1",
     "react-firebaseui": "^6.0.0",
+    "react-speech-kit": "^3.0.1",
     "uuid": "^9.0.0"
   }
 }
