--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "next": "12.3.3",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.1.1",
     "react-firebaseui": "^6.0.0",
